--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CPU Scheduling Algorithm Visualization</title>
+  <LINK REL="SHORTCUT ICON"  HREF="./communist.png"> 
   <link rel="stylesheet" href="./style.css">
 
 </head>
